# redstalk

./: .gitignore  README.md  ai_utils.py  analysis.py  config.json  config_utils.py  data_utils.py  index.html  llm_wrapper.py  main.py  monitoring.py  prompt.txt  pyproject.toml  reddit_utils.py  redstalk.py  requirements.txt  run_redstalk.sh  stats_utils.py  working.md
data/sarthaksidhant/: sarthaksidhant-comments.csv  sarthaksidhant-posts.csv  sarthaksidhant_charc_mapped_20250419_211643.md  sarthaksidhant_charc_mapped_20250419_215438.md  sarthaksidhant_charc_mapped_20250419_234234.md  sarthaksidhant_charc_mapped_20250419_234703.md  sarthaksidhant_charc_mapped_20250420_025348.md  sarthaksidhant_charc_mapped_20250420_031036.md  sarthaksidhant_charc_mapped_20250420_034134.md  sarthaksidhant_charc_raw_20250419_160335.md  sarthaksidhant_charc_raw_20250419_160909.md  sarthaksidhant_charc_raw_20250419_162041.md  sarthaksidhant_charc_raw_20250419_162220.md  sarthaksidhant_stats_20250420_025347.md  sarthaksidhant_stats_20250420_031035.md  sarthaksidhant_stats_20250420_034133.md  sarthaksidhant_stats_20250420_034451.md  sarthaksidhant_stats_20250420_083126.md  sarthaksidhant_stats_20250423_231442.md  (+3 more)
prompts/: biasfal.txt  faith.txt  hate.txt  job.txt  love.txt  love2.txt  meme.txt  prompt.txt  stop.txt
redstalk/: ai_utils.py  analysis.py  config_utils.py  data_utils.py  llm_wrapper.py  main.py  monitoring.py  reddit_utils.py
stats/: README.MD  __init__.py  calculations.py  comparison.py  core_utils.py  reporting.py  single_report.py
tests/: test_redstalk_basic.py
(+9 files in other folders)
